# pygrad

./: .env_example  .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
api/core/: index.html
api/parser/: index.html
api/processor/: index.html
api/repository/: index.html
architecture/: index.html
architecture/components/: index.html
architecture/how-it-works/: index.html
configuration/: index.html
configuration/database/: index.html
configuration/ollama/: index.html
configuration/openai/: index.html
contributing/: index.html
docs/: contributing.md  index.md  neo4j-integration.md
docs/api/: repository.md
docs/examples/: basic-usage.md  searching.md
docs/getting-started/: installation.md
examples/: index.html  index_repository.py  neo4j_example.py
examples/basic-usage/: index.html
examples/cli-usage/: index.html
examples/integration/: index.html
examples/searching/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/pygrad/: __init__.py  cli.py  config.py  core.py  prompt_store.py  repository.py  server.py  xmlapi.py
src/pygrad/common/: log.py
src/pygrad/graphrag/: __init__.py  common.py  config.py  embeddings.py  llm.py  (+2 more)
tests/: conftest.py  test_core.py  test_markdown_extractor.py  test_neo4j_graph.py  test_notebook_extractor.py  test_processor.py  test_repository.py  test_treesitter.py  test_xmlapi.py
(+8 files in other folders)
